[gd_scene load_steps=2 format=3 uid="uid://bcq82mguj4by5"]

[ext_resource type="Script" path="res://scripts/gameplay/loss_screen.gd" id="1_00nue"]

[node name="LossScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_00nue")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.5
offset_top = -49.5
offset_right = 131.5
offset_bottom = 49.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="VictoryTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Game Over!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VictorySubtitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "You've died."
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/separation = 16

[node name="MainMenuBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/MainMenuBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Return to Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayAgainBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PlayAgainBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Play Again"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/HBoxContainer/MainMenuBtn" to="." method="main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PlayAgainBtn" to="." method="play_again_pressed"]
